src/auryn/tests/snapshots/auryn__auryn__tests__ui@inference_failure_nested_array_calls.au.snap
---
source: src/auryn/tests/mod.rs
expression: "fn main() {\n\tlet a = arrayGet(arrayOfZeros(50), 25)\n}\n"
input_file: src/auryn/tests/inputs/ui/inference_failure_nested_array_calls.au
---
Error: Could not infer type
   ╭─[ main:2:19 ]
   │
 2 │     let a = arrayGet(arrayOfZeros(50), 25)
   │                      ────────┬───────  
   │                              ╰───────── Could not infer the type of this expresssion
   │ 
   │ Help: Try annotating the expression: `let val: ExpectedType = ...`
───╯
